z-index: -1; para fixed;

--- a/css/style1.css
+++ b/css/style1.css
@@ -27,10 +27,12 @@ h1{
 
 p{
     background: url(../assets/ben-jerry-20180410-001.jpg);
-    background-repeat: no-repeat;
     /* Posso usar também repeat y ou x para repetir só um e cover */
-    background-attachment: fixed;
     /* O background padrão é o scrow, no fixed ele rola junto com a página. assim como também pode ser center */
-    background: url(../assets/ben-jerry-20180410-001.jpg) center/cover no-repeat fixed;
+    background: url(../assets/ben-jerry-20180410-001.jpg) ;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: 800px 600px;
+    background-position: 50%;
     /* criando em unica linha */
 }
